# djangoauth

./: .gitignore  README.md  pyproject.toml
apps/account/: admin.py  managers.py  models.py  notes.MD  tests.py
apps/account/migrations/: 0001_initial.py
apps/inventory/: admin.py  models.py
apps/inventory/migrations/: 0001_initial.py
core/: settings.py
