[tool.poetry]
name = "djangoauth"
version = "0.1.0"
description = "Django authentication and authorization playground"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
mypy = "^0.942"
black = "^22.3.0"
django-extensions = "^3.1.5"
ipython = "^8.2.0"
django-debug-toolbar = "^3.2.4"
isort = "^5.10.1"
django-stubs = "^1.10.1"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
pytest = "^7.1.1"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
